2004-06-07 Tanya Wolff
	Fix for Bug 66053 - externalized string in cview

	* src/org/eclipse/cdt/internal/ui/cview/IncludeRefContainer.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewMessages.properties

2004-06-08 Hoda Amer
	Fix for bug 51482, 61039 
	* src/org/eclipse/cdt/internal/ui/preferences/TemplatePreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/ColorEditor.java
	Fix for bug 44552
	Patch from Dave applied.
	
2004-06-08 Hoda Amer
	Fixes for bugs 62780, 62783, 62784
	* refactor/org/eclipse/cdt/internal/corext/refactoring/rename/RenameElementProcessor.java
	
2004-06-08 Alain Magloire

	Fix for bug 65173
	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/LexicalSortingAction.java

2004-06-08 Alain Magloire

	Fix For Bug 65172
	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/CBrowsingContentProvider.java

2004-06-07 Hoda Amer
	Fix for bug 63395 : [Refactoring] a template class does not refactor its constructor
	
2004-06-07 Bogdan Gheorghe
	Fix for Bug 60772
	
	* src/org/eclipse/cdt/internal/ui/search/actions/FindAction.java
	
2004-06-06 Bogdan Gheorghe
	Changed MouseClickListener to use Parser KeywordSets 
	* src/org/eclipse/cdt/internal/ui/editor/MouseClickListener.java
	
2004-06-06 Bogdan Gheorghe
	Fix for Bug 60629 
	* src/org/eclipse/cdt/internal/ui/CPluginImages.java
	* src/org/eclipse/cdt/internal/ui/search/CSearchMessages.properties
	* src/org/eclipse/cdt/internal/ui/search/CSearchResultPage.java
	* src/org/eclipse/cdt/internal/ui/search/LevelTreeContentProvider.java
	* src/org/eclipse/cdt/ui/CSearchResultLabelProvider.java
	
2004-06-03 Alain Magloire

	Fix for PR 60650
	* src/org/eclipse/cdt/ui/wizards/NewClassWizardPage.java

2004-06-03 Alain Magloire

	Fix for PR 64197 60906

	* src/org/eclipse/cdt/ui/dialogs/BinaryParserBlock.java

2004-06-03 Alain Magloire
	Again the problem:
	Eclipse filename association with editors is done strictly via
	the plugin.xml(and Preference Page).