@@ -1,3 +1,10 @@
+2004-06-08 Alain Magloire
+
+	Fix for PR 66186.
+	Remove the log() print not necessary
+	and users thinks something went wrong.
+	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java
+
 2004-06-07 Tanya Wolff
 	Fix for Bug 66053 - externalized string in cview
 
